(API) Sincronización de clientes con Odoo + Endpoint Sync Manual